[metadata]
name = firefighter
version = attr: firefighter.__version__
description = AWS Kinesis Data Firehose logging handler
long_description = file: README.rst
keywords = firehose, aws, kinesis
license = Apache Software License
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: System :: Logging

[options]
packages = find:
install_requires =
    boto3 >= 1.7.81

[options.extras_require]
tests =
    flake8
    flake8-import-order >= 0.18, < 0.19
    flake8-import-order-spoqa >= 1.4.1, < 1.5
    moto >= 1.3.4, < 1.4
    pytest >= 3.7.1
    pytest-flake8 >= 1.0.2, < 1.1
    tox >= 3.2.1
docs =
    Sphinx >= 1.7.6

[bdist_wheel]
universal = 1
